# okf-cli

./: .dockerignore  .gitignore  .last-update.json  AGENTS.md  Dockerfile  OKF_SPEC.md  README.md  pyproject.toml
.github/workflows/: test.yml
PLAN/: SERVER.md  UI.md
bundled-smoke/: domain.md  index.md
bundled-smoke/datasets/: index.md  sales.md
bundled-smoke/loose/: index.md  no-desc.md  no-title.md
bundled-smoke/loose/deep/: index.md  no-heading.md
bundled-smoke/playbooks/: incident-response.md  index.md  oncall-guide.md
bundled-smoke/tables/: customers.md  index.md
bundled-smoke/tables/partitions/: daily.md  index.md
bundled-smoke/tables/partitions/2026/: index.md
bundled-smoke/tables/partitions/2026/q1/: index.md
example/: .okfignore  README.md  smoke-ignore.md
example/blank-line/: no-blank.md  with-blank.md
example/datasets/: sales.md
example/loose/: no-desc.md  no-title.md
example/playbooks/: incident-response.md  oncall-guide.md
example/tables/: customers.md  orders.md
example/tables/partitions/: daily.md
openwiki/: architecture.md  domain-model.md  manual-remote-test.md  operations.md  quickstart.md  testing.md  workflows.md
scripts/: smoke.sh
skills/okf-cli/: SKILL.md
skills/okf-cli-manual/: SKILL.md
skills/writing-knowledge-base/: SKILL.md
skills/writing-knowledge-base/reference/: knowledge-base.md
skills/writing-knowledge-base/reference/example/: domain.md
skills/writing-knowledge-base/reference/example/tables/: customers.md  (+1 more)
src/okf/: api.py  cli.py  core.py  remote.py
src/okf/commands/: bundle.py  clone.py  list.py  publish.py  read.py  show.py  validate.py
src/okf/server/: _common.py  app.py  auth.py  cli.py  storage.py
tests/: test_api.py  test_cli.py  test_core.py
tests/cli/: test_bundle.py  test_list.py  test_show.py  test_validate.py
tests/e2e/: test_e2e.py
tests/server/: test_auth.py  test_server_api.py  test_storage.py
(+6 files in other folders)
