[project]
name = "okf-cli"
version = "0.4.8"
description = "Open Knowledge Format tooling"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = ["typer>=0.15", "pyyaml>=6"]

[project.optional-dependencies]
server = [
    "fastapi>=0.115",
    "python-multipart>=0.0.20",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
]

[project.scripts]
okf = "okf.cli:app"
okf-server = "okf.server.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/okf"]

[dependency-groups]
dev = ["pytest>=8", "ruff>=0.14"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
