[project]
name = "okf-cli"
version = "0.5.1"
description = "Open Knowledge Format tooling"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "typer>=0.15",
    "pyyaml>=6",
    "rich>=15.0.0",
]

[project.scripts]
okf = "okf.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/okf"]

[dependency-groups]
dev = ["pytest>=8", "ruff>=0.14"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
